eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-api-deployment
  labels:
    app: front-end-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end-api
  template:
    metadata:
      labels:
        app: front-end-api
    spec:
      containers:
      - name: front-end-api
        image: 486660158178.dkr.ecr.us-east-2.amazonaws.com/datatrace:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
