eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-api-service
spec:
  selector:
    app: front-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 
  type: ClusterIP
