eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: "nginx"  # Or "alb", etc.
  rules:
  - host: "appv2.leetyap.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end-api-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - app.leetyap.com
  #   secretName: front-end-api-cert
